--- a/Szewczyk-Tomasz-gr.-Lab1-Niestacjonarne/Projekt1-EdytorGraficzny/index.html
+++ b/Szewczyk-Tomasz-gr.-Lab1-Niestacjonarne/Projekt1-EdytorGraficzny/index.html
@@ -12,74 +12,10 @@
     <canvas width="600" height="300" id="ps"></canvas>
     <button id="run">Start</button>
 
+    <label for="brightnessValue"></label>
+    <input type="range" id="brightnessValue" min="-50" max="50" value="0">
 
-    <script>
-        let canvas = document.querySelector('#ps')
-        let ctx = canvas.getContext('2d')
-        const imgSrc = "https://picsum.photos/600/300/?random=1";
-
-
-        let img = new Image();
-
-
-        img.crossOrigin = "Anonymous";
-
-
-
-
-        img.src = imgSrc
-        img.addEventListener('load', () => {
-            ctx.drawImage(img, 0, 0, canvas.width, canvas.height)
-        })
-        document.querySelector('#run')
-            .addEventListener('click', brightnessChange)
-
-        function brightnessChange() {
-            // pobieranie pikseli z canvas
-
-            let imageData = ctx.getImageData(0, 0, canvas.width, canvas.height)
-            let factor = 10
-            for (let i = 0; i < imageData.data.length; i += 4) {
-                // dodaje  zmienną 'factor' 30 do wartości pixela
-
-                imageData.data[i] += factor
-                imageData.data[i + 1] += factor
-                imageData.data[i + 2] += factor
-
-            }
-            ctx.putImageData(imageData, 0, 0)
-
-
-        }
-
-
-
-
-
-
-
-
-
-        // zmiana kontrastu jane piksele rozjaśnić
-        // ciemne przyciemnić
-        // coś takiego
-
-        // if(imageData.data[i]>127){
-        // imageData.data[i]=Math.flor(imageData.data[i]-factor) 
-
-
-
-        // suma rgb i pdzielone na 3
-
-        // nasycenie wartośc dominująca rgb powiększona najwięcej 
-        // reszta procętowo mniej
-
-        // sepia 
-
-        // rozmycie pixeli uśrednienie kilku pixeli
-    </script>
-
-
+    <script src="main.js"></script>
 
 </body>
 
