dodać ify w contras

--- a/Szewczyk-Tomasz-gr.-Lab1-Niestacjonarne/Projekt1-EdytorGraficzny/index.html
+++ b/Szewczyk-Tomasz-gr.-Lab1-Niestacjonarne/Projekt1-EdytorGraficzny/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Edytor Graficzny</title>
 </head>
 
 <body>
     <canvas width="600" height="300" id="ps"></canvas>
-    <button id="run">Start</button>
-
     <label for="brightnessValue"></label>
-    <input type="range" id="brightnessValue" min="-50" max="50" value="0">
+    <input type="range" id="brightnessValue" min="-50" max="50">
+
+    <label for="contrastValue"></label>
+    <input type="range" id="contrastValue" min="0" max="100">
 
     <script src="main.js"></script>
 
